# box

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.box_base  OLD_CMakeLists.txt  OLD_tmp.box  README.md  audio.sh  docker.sh  entrypoint.sh  log.txt  main.cc  main.cpp  print.sh  run.sh  tmp.box  todo.md
.github/workflows/: cmake-multi-platform.yml  docker-base.yml  test.yml
assets/font/: BoldPixels.fnt  License.txt  departure_mono.fnt  quinque.fnt  quinque_0.fnt
examples/: Fake_CMakeLists.txt  raylib_example.cc  raylib_font.cc
examples/GuiApp/: CMakeLists.txt  MainComponent.cpp  MainComponent.h
fake_main/: fake_main.cc
include/: color.hh  demo_screen.hh  interface.hh  io_interface.hh  manager.hh  plugin_four_osc.hh  plugin_manager.hh  screen.hh  screen_demo_1stripe.hh  screen_demo_2bomb.hh  screen_four_osc.hh  screen_manager.hh  track.hh  track_manager.hh  util.hh
include/component/: knob.hh  switch.hh
include/core/: MainComponent.hh  app.hh  component.hh  cv.hh  interface.hh  manager.hh  parameter.hh  plugin.hh  plugin_manager.hh  plugin_selector.hh  timeline.hh  track.hh  track_manager.hh  util.hh
include/graphics/: framebuffer.hh  mesh.hh  shader.hh  texture.hh  vertex_array.hh  vertex_buffer.hh  vertex_buffer_layout.hh
include/plugin/: chorus.hh  compressor.hh  delay.hh  eq.hh  equaliser.hh  four_osc.hh  latency.hh  phaser.hh  reverb.hh  tone_generator.hh
junit/: junit_test.cc
scripts/: fake.sh  format.sh  juce_app.sh  junit.sh  test.sh
shader/: texture.frag  texture.vert
src/: MainComponent.cc  interface.cc  io_interface.cc  main.cc  manager.cc  plugin_four_osc.cc  plugin_manager.cc  screen_manager.cc  track.cc  track_manager.cc  util.cc
src/core/: app.cc  interface.cc  manager.cc  plugin.cc  plugin_selector.cc  timeline.cc  track.cc  track_manager.cc  util.cc
src/graphics/: framebuffer.cc  mesh.cc  shader.cc  texture.cc
src/plugin/: chorus.cc  compressor.cc  delay.cc  eq.cc  four_osc.cc  plugin_chorus.cc  plugin_compressor.cc  plugin_delay.cc  plugin_equaliser.cc  plugin_four_osc.cc  plugin_latency.cc  plugin_manager.cc  plugin_phaser.cc  plugin_reverb.cc  plugin_tone_generator.cc
test/: circle_render.cc  demo.cc  demo_gl.cc  demo_graphics.cc  fake_main.cc  fuzz.cc  gl  nc_test.cc  test.cc  test.cpp  test_util.cc  test_util.hh  unit_test.cc
tmp/: delay.box
tmp/include_plugin/: latency.hh
tmp/src_plugin/: plugin_compressor.cc  plugin_equaliser.cc  plugin_latency.cc
